# doc-scanner

./: README.md  main.py  pyproject.toml  split_pdf.py  test_main.py
